--- a/views/week.ejs
+++ b/views/week.ejs
@@ -14,8 +14,8 @@
       
 
       <h2 class="week-heading">Weekly Progress Status</h2>
-            <% for(let i of habbit_list) {%> 
-                 <p id="my_habit"><%= i.name %></p>
+            <% for(let i of todo_list) {%> 
+                 <p id="my_todo"><%= i.name %></p>
             <%}%>
 
       <table class="table" border="2">
@@ -31,7 +31,7 @@
             <th scope="col">Saturday</th>
           </tr>
         <tr>
-          <!-- <th scope="col">Habit</th> -->
+          <!-- <th scope="col">ToDo</th> -->
           <th scope="col">1 Aug</th>
           <th scope="col">2 Aug</th>
           <th scope="col">3 Aug</th>
