--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,6 +1,6 @@
 body{
     height: 100%;
-    background-image: linear-gradient(#9E9E9E,#9e9e9e05);
+    background-image: linear-gradient(#e7cbcb,#9e9e9e05);
     background-repeat: no-repeat;
     font-family: sans-serif;
     color: #0f222d;
@@ -9,7 +9,7 @@ body{
     padding: auto;
 }
 #main{
-    background-color: rgb(152, 139, 199);
+    background-color: rgb(47, 49, 77);
     width: 50%;
     padding: 3rem;
     display: flex;
@@ -45,11 +45,20 @@ body{
   width: 8rem;
 }
 
+.cat_try{
+  background-color: rgb(144, 117, 179);
+  color: white;
+  padding: 10px 10px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  width: 8rem;
+}
 /* The popup form - hidden by default */
 .form-popup {
   display: none;
   position: fixed;
-  bottom: 10rem;
+  bottom: 3rem;
   right: 30rem;
   border: 3px solid #f1f1f1;
 }
@@ -160,17 +169,19 @@ ul li:hover {
     display: flex;
     flex-direction: column;
 }
+
 .detail p{
     margin: 5px 0;
 }
 
 .detail #my_name{
   font-size: 20px;
+  font-variant-caps: all-petite-caps;
 }
-
+/* 
 .detail p a{
  text-decoration: none;
-}
+} */
 
 .todo .detail{
     display: flex;
@@ -178,6 +189,14 @@ ul li:hover {
     flex-wrap: wrap;
     justify-content: space-between;
     width: 70%;
+}
+
+.todo .detail .detail1{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 150%;
 }
 
 .delete-button{
@@ -196,94 +215,12 @@ ul li:hover {
   color: white;
 }
 
- /* week page styling */
-
- .week-heading{
-   background-color: peru;
-   /* margin: auto; */
-   padding: 15px;
-   width: 100%;
- }
-
- #my_todo{
-   font-size: 20px;
-   color: purple;
-   font-weight: 600;
- }
-
- .table{
-  
-  border-collapse: collapse;
-  background-color: rgb(152, 139, 199);
-  /* width: 70%; */
-  margin: auto;
-   
- }
-
- th {
-  height: 50px;
-}
-
-th, td {
-  border-bottom: 1px solid #ddd;
-}
-
-tr:hover {background-color: #b8c6eb;}
-
-th {
-  background-color: #789679;
-  color: white;
-}
-
-.toggle select{
-  height:50px;
-  background-color: #9da748;
-  font-size: 18px;
-}
-
- .btn {
-  border-radius: 4px;
-  background-color: #413ee9;
+.mySelect{
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0 22px 0;
   border: none;
-  color: #FFFFFF;
-  text-align: center;
-  font-size: 20px;
-  padding: 15px;
-  width: 200px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
+  background: #f1f1f1;
 }
 
-.btn span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-.btn span:after {
-  content: ' \00AB';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  left: 20px;
-  transition: 0.5s;
-}
-
-.btn:hover span {
-  padding-left: 25px;
-}
-
-.btn:hover span:after {
-  opacity: 1;
-  left: 0;
-}
-
-#result{
-  font-size: 20px;
-  margin: auto;
-  size: auto;
-}
-
-
+ 
